# histogram

./: .gitignore  CMakeLists.txt  README.md
apps/main_app/: CMakeLists.txt  main_app.cpp
apps/main_app/ui/: CMakeLists.txt
apps/main_app/ui/main_window_handler/: CMakeLists.txt  main_window_handler.cpp  main_window_handler.h
apps/main_app/ui/qml/: main.qml
etc/: main_app_config.h.cmake
libs/: CMakeLists.txt
libs/words_histogram_lib/: CMakeLists.txt
libs/words_histogram_lib/etc/: test_config.h.cmake
libs/words_histogram_lib/include/: words_histogram_lib.h
libs/words_histogram_lib/include/words_counter_module/: words_counter_module.h
libs/words_histogram_lib/include/words_source_module/: words_source_module.h  words_source_module_files_impl.h
libs/words_histogram_lib/share/verified_test_files/: test_file.txt
libs/words_histogram_lib/src/: words_histogram_lib.cpp
libs/words_histogram_lib/src/words_counter_module/: words_counter_module.cpp
libs/words_histogram_lib/src/words_source_module/: words_source_module.cpp  words_source_module_files_impl.cpp
libs/words_histogram_lib/test/: words_counter_module_tests.cpp  words_source_module_tests.cpp
